# PlantSim-Agent

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md
agents/: citation-reviewer.agent.md  plantsim-copilot.agent.md
docs/: architecture.md  cold-install.md  kb-build-guide.md  manual-mcp.md  roadmap.md  spec.md
docs/release-notes/: v0.1.0-announcement.md  v0.1.0.md  v0.1.1.md
kb_local/: README.md
kb_minimal/: README.md  knowledge-base-map.md  modeling-standards.md  simtalk-api-index.md  simtalk-syntax-quick-ref.md
mcp/: README.md  pyproject.toml
mcp/plantsim_mcp/: __init__.py  build_kb_wizard.py  config.py  register_vscode.py  server.py
mcp/plantsim_mcp/indexers/: __init__.py  help_md_to_fts.py  psfm_indexer.py  psfm_parser.py  pts_help_fullmd_indexer.py
mcp/plantsim_mcp/rules/: __init__.py
mcp/plantsim_mcp/storage/: __init__.py  base.py  project.py  sqlite.py
mcp/plantsim_mcp/tools/: __init__.py  _project_common.py  find_callers.py  find_method.py  get_api.py  get_object_graph.py  list_section.py  search_code.py  search_help.py  smart_lookup.py  validate_simtalk.py
mcp/scripts/: smoke_psfm.py  smoke_psfm_kongming.py
mcp/tests/: conftest.py  test_build_kb_wizard.py  test_cli.py  test_config.py  test_get_api.py  test_help_indexer.py  test_list_section.py  test_psfm_parser.py  test_psfm_project.py  test_pts_help_fullmd_indexer.py  test_register_vscode.py  test_search_help.py  test_simtalk_rules.py  test_smart_lookup.py  test_storage_sqlite.py
scripts/: build_kb.py  convert_help_pdf.py  install.ps1  sync-help-from-workspace.ps1  uninstall.ps1
skills/plantsim-code-author/: SKILL.md
skills/plantsim-kb-qa/: SKILL.md
skills/plantsim-project-analyst/: SKILL.md
tests/cold_install/: test_cold_install.py
tests/eval/: README.md  citation_recall.yaml  conftest.py  qa_questions.yaml  run_eval.py  test_eval_pytest.py
